src/parser/hw_compilationParser.java
// $ANTLR 3.4 /home/sergio/hw-compilation/src/parser/hw_compilation.g 2015-05-30 13:27:40

    package parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class hw_compilationParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARG", "BINARY", "BWAND", "BWNOT", "BWOR", "BWXOR", "CNUF", "COMMA", "DEC", "DO", "ELIHW", "ELSE", "EQ", "FI", "FUNC", "FUNC_CALL", "GRA", "GT", "GTE", "HEX", "ID", "IF", "INSTR_LIST", "LEQ", "LNOT", "LPAREN", "LT", "LTE", "MINUS", "NEQ", "OR", "PARAM", "PLUS", "RAV", "ROOT", "RPAREN", "SEPARATOR", "SHIFT_LEFT", "SHIFT_RIGHT", "THEN", "VAR", "VECTOR_SIZE", "WHILE", "WS"
    };

    public static final int EOF=-1;
    public static final int AND=4;
    public static final int ARG=5;
    public static final int BINARY=6;
    public static final int BWAND=7;
    public static final int BWNOT=8;
    public static final int BWOR=9;
    public static final int BWXOR=10;
    public static final int CNUF=11;
    public static final int COMMA=12;
    public static final int DEC=13;
    public static final int DO=14;
    public static final int ELIHW=15;
    public static final int ELSE=16;
    public static final int EQ=17;
    public static final int FI=18;
    public static final int FUNC=19;
    public static final int FUNC_CALL=20;
    public static final int GRA=21;
    public static final int GT=22;
    public static final int GTE=23;
    public static final int HEX=24;
    public static final int ID=25;
    public static final int IF=26;
    public static final int INSTR_LIST=27;
    public static final int LEQ=28;
    public static final int LNOT=29;
    public static final int LPAREN=30;
    public static final int LT=31;
    public static final int LTE=32;
    public static final int MINUS=33;
    public static final int NEQ=34;
    public static final int OR=35;
    public static final int PARAM=36;
    public static final int PLUS=37;
    public static final int RAV=38;
    public static final int ROOT=39;
    public static final int RPAREN=40;
    public static final int SEPARATOR=41;
    public static final int SHIFT_LEFT=42;
    public static final int SHIFT_RIGHT=43;
    public static final int THEN=44;
    public static final int VAR=45;
    public static final int VECTOR_SIZE=46;
    public static final int WHILE=47;
    public static final int WS=48;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public hw_compilationParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public hw_compilationParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return hw_compilationParser.tokenNames; }
    public String getGrammarFileName() { return "/home/sergio/hw-compilation/src/parser/hw_compilation.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:25:1: program : VECTOR_SIZE int_value ( function )+ EOF -> ^( ROOT int_value ( function )+ ) ;
    public final hw_compilationParser.program_return program() throws RecognitionException {
        hw_compilationParser.program_return retval = new hw_compilationParser.program_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token VECTOR_SIZE1=null;
        Token EOF4=null;
        hw_compilationParser.int_value_return int_value2 =null;

        hw_compilationParser.function_return function3 =null;


        Object VECTOR_SIZE1_tree=null;
        Object EOF4_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleTokenStream stream_VECTOR_SIZE=new RewriteRuleTokenStream(adaptor,"token VECTOR_SIZE");
        RewriteRuleSubtreeStream stream_int_value=new RewriteRuleSubtreeStream(adaptor,"rule int_value");
        RewriteRuleSubtreeStream stream_function=new RewriteRuleSubtreeStream(adaptor,"rule function");
        try {
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:25:9: ( VECTOR_SIZE int_value ( function )+ EOF -> ^( ROOT int_value ( function )+ ) )
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:25:11: VECTOR_SIZE int_value ( function )+ EOF
            {
            VECTOR_SIZE1=(Token)match(input,VECTOR_SIZE,FOLLOW_VECTOR_SIZE_in_program77);  
            stream_VECTOR_SIZE.add(VECTOR_SIZE1);


            pushFollow(FOLLOW_int_value_in_program79);
            int_value2=int_value();

            state._fsp--;

            stream_int_value.add(int_value2.getTree());

            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:25:33: ( function )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==FUNC) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:25:34: function
            	    {
            	    pushFollow(FOLLOW_function_in_program82);
            	    function3=function();

            	    state._fsp--;

            	    stream_function.add(function3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            EOF4=(Token)match(input,EOF,FOLLOW_EOF_in_program86);  
            stream_EOF.add(EOF4);


            // AST REWRITE
            // elements: int_value, function
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 25:49: -> ^( ROOT int_value ( function )+ )
            {
                // /home/sergio/hw-compilation/src/parser/hw_compilation.g:25:52: ^( ROOT int_value ( function )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(ROOT, "ROOT")
                , root_1);

                adaptor.addChild(root_1, stream_int_value.nextTree());

                if ( !(stream_function.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_function.hasNext() ) {
                    adaptor.addChild(root_1, stream_function.nextTree());

                }
                stream_function.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class function_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "function"
    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:28:1: function : FUNC ^ ID ( args )? ( vars )? list_instructions CNUF !;
    public final hw_compilationParser.function_return function() throws RecognitionException {
        hw_compilationParser.function_return retval = new hw_compilationParser.function_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token FUNC5=null;
        Token ID6=null;
        Token CNUF10=null;
        hw_compilationParser.args_return args7 =null;

        hw_compilationParser.vars_return vars8 =null;

        hw_compilationParser.list_instructions_return list_instructions9 =null;


        Object FUNC5_tree=null;
        Object ID6_tree=null;
        Object CNUF10_tree=null;

        try {
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:28:9: ( FUNC ^ ID ( args )? ( vars )? list_instructions CNUF !)
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:28:11: FUNC ^ ID ( args )? ( vars )? list_instructions CNUF !
            {
            root_0 = (Object)adaptor.nil();


            FUNC5=(Token)match(input,FUNC,FOLLOW_FUNC_in_function109); 
            FUNC5_tree = 
            (Object)adaptor.create(FUNC5)
            ;
            root_0 = (Object)adaptor.becomeRoot(FUNC5_tree, root_0);


            ID6=(Token)match(input,ID,FOLLOW_ID_in_function112); 
            ID6_tree = 
            (Object)adaptor.create(ID6)
            ;
            adaptor.addChild(root_0, ID6_tree);


            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:28:20: ( args )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ARG) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:28:20: args
                    {
                    pushFollow(FOLLOW_args_in_function114);
                    args7=args();

                    state._fsp--;

                    adaptor.addChild(root_0, args7.getTree());

                    }
                    break;

            }


            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:28:26: ( vars )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==VAR) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:28:26: vars
                    {
                    pushFollow(FOLLOW_vars_in_function117);
                    vars8=vars();

                    state._fsp--;

                    adaptor.addChild(root_0, vars8.getTree());

                    }
                    break;

            }


            pushFollow(FOLLOW_list_instructions_in_function120);
            list_instructions9=list_instructions();

            state._fsp--;

            adaptor.addChild(root_0, list_instructions9.getTree());

            CNUF10=(Token)match(input,CNUF,FOLLOW_CNUF_in_function122); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "function"


    public static class args_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "args"
    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:31:1: args : ARG ^ ID ( COMMA ! ID )* GRA !;
    public final hw_compilationParser.args_return args() throws RecognitionException {
        hw_compilationParser.args_return retval = new hw_compilationParser.args_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ARG11=null;
        Token ID12=null;
        Token COMMA13=null;
        Token ID14=null;
        Token GRA15=null;

        Object ARG11_tree=null;
        Object ID12_tree=null;
        Object COMMA13_tree=null;
        Object ID14_tree=null;
        Object GRA15_tree=null;

        try {
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:31:6: ( ARG ^ ID ( COMMA ! ID )* GRA !)
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:31:8: ARG ^ ID ( COMMA ! ID )* GRA !
            {
            root_0 = (Object)adaptor.nil();


            ARG11=(Token)match(input,ARG,FOLLOW_ARG_in_args133); 
            ARG11_tree = 
            (Object)adaptor.create(ARG11)
            ;
            root_0 = (Object)adaptor.becomeRoot(ARG11_tree, root_0);


            ID12=(Token)match(input,ID,FOLLOW_ID_in_args136); 
            ID12_tree = 
            (Object)adaptor.create(ID12)
            ;
            adaptor.addChild(root_0, ID12_tree);


            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:31:16: ( COMMA ! ID )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==COMMA) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:31:17: COMMA ! ID
            	    {
            	    COMMA13=(Token)match(input,COMMA,FOLLOW_COMMA_in_args139); 

            	    ID14=(Token)match(input,ID,FOLLOW_ID_in_args142); 
            	    ID14_tree = 
            	    (Object)adaptor.create(ID14)
            	    ;
            	    adaptor.addChild(root_0, ID14_tree);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            GRA15=(Token)match(input,GRA,FOLLOW_GRA_in_args146); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "args"


    public static class vars_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "vars"
    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:34:1: vars : VAR ^ ID ( COMMA ! ID )* RAV !;
    public final hw_compilationParser.vars_return vars() throws RecognitionException {
        hw_compilationParser.vars_return retval = new hw_compilationParser.vars_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token VAR16=null;
        Token ID17=null;
        Token COMMA18=null;
        Token ID19=null;
        Token RAV20=null;

        Object VAR16_tree=null;
        Object ID17_tree=null;
        Object COMMA18_tree=null;
        Object ID19_tree=null;
        Object RAV20_tree=null;

        try {
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:34:6: ( VAR ^ ID ( COMMA ! ID )* RAV !)
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:34:8: VAR ^ ID ( COMMA ! ID )* RAV !
            {
            root_0 = (Object)adaptor.nil();


            VAR16=(Token)match(input,VAR,FOLLOW_VAR_in_vars157); 
            VAR16_tree = 
            (Object)adaptor.create(VAR16)
            ;
            root_0 = (Object)adaptor.becomeRoot(VAR16_tree, root_0);


            ID17=(Token)match(input,ID,FOLLOW_ID_in_vars160); 
            ID17_tree = 
            (Object)adaptor.create(ID17)
            ;
            adaptor.addChild(root_0, ID17_tree);


            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:34:16: ( COMMA ! ID )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:34:17: COMMA ! ID
            	    {
            	    COMMA18=(Token)match(input,COMMA,FOLLOW_COMMA_in_vars163); 

            	    ID19=(Token)match(input,ID,FOLLOW_ID_in_vars166); 
            	    ID19_tree = 
            	    (Object)adaptor.create(ID19)
            	    ;
            	    adaptor.addChild(root_0, ID19_tree);


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            RAV20=(Token)match(input,RAV,FOLLOW_RAV_in_vars170); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "vars"


    public static class list_instructions_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "list_instructions"
    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:37:1: list_instructions : ( instruction SEPARATOR )+ -> ^( INSTR_LIST ( instruction )+ ) ;
    public final hw_compilationParser.list_instructions_return list_instructions() throws RecognitionException {
        hw_compilationParser.list_instructions_return retval = new hw_compilationParser.list_instructions_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token SEPARATOR22=null;
        hw_compilationParser.instruction_return instruction21 =null;


        Object SEPARATOR22_tree=null;
        RewriteRuleTokenStream stream_SEPARATOR=new RewriteRuleTokenStream(adaptor,"token SEPARATOR");
        RewriteRuleSubtreeStream stream_instruction=new RewriteRuleSubtreeStream(adaptor,"rule instruction");
        try {
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:37:19: ( ( instruction SEPARATOR )+ -> ^( INSTR_LIST ( instruction )+ ) )
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:37:21: ( instruction SEPARATOR )+
            {
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:37:21: ( instruction SEPARATOR )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0 >= ID && LA6_0 <= IF)||LA6_0==WHILE) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:37:22: instruction SEPARATOR
            	    {
            	    pushFollow(FOLLOW_instruction_in_list_instructions189);
            	    instruction21=instruction();

            	    state._fsp--;

            	    stream_instruction.add(instruction21.getTree());

            	    SEPARATOR22=(Token)match(input,SEPARATOR,FOLLOW_SEPARATOR_in_list_instructions191);  
            	    stream_SEPARATOR.add(SEPARATOR22);


            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);


            // AST REWRITE
            // elements: instruction
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 37:46: -> ^( INSTR_LIST ( instruction )+ )
            {
                // /home/sergio/hw-compilation/src/parser/hw_compilation.g:37:49: ^( INSTR_LIST ( instruction )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(INSTR_LIST, "INSTR_LIST")
                , root_1);

                if ( !(stream_instruction.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_instruction.hasNext() ) {
                    adaptor.addChild(root_1, stream_instruction.nextTree());

                }
                stream_instruction.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "list_instructions"


    public static class instruction_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "instruction"
    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:40:1: instruction : ( assignment_stmt | ite_stmt | while_stmt );
    public final hw_compilationParser.instruction_return instruction() throws RecognitionException {
        hw_compilationParser.instruction_return retval = new hw_compilationParser.instruction_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        hw_compilationParser.assignment_stmt_return assignment_stmt23 =null;

        hw_compilationParser.ite_stmt_return ite_stmt24 =null;

        hw_compilationParser.while_stmt_return while_stmt25 =null;



        try {
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:40:13: ( assignment_stmt | ite_stmt | while_stmt )
            int alt7=3;
            switch ( input.LA(1) ) {
            case ID:
                {
                alt7=1;
                }
                break;
            case IF:
                {
                alt7=2;
                }
                break;
            case WHILE:
                {
                alt7=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }

            switch (alt7) {
                case 1 :
                    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:40:15: assignment_stmt
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_assignment_stmt_in_instruction215);
                    assignment_stmt23=assignment_stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, assignment_stmt23.getTree());

                    }
                    break;
                case 2 :
                    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:41:6: ite_stmt
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ite_stmt_in_instruction222);
                    ite_stmt24=ite_stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, ite_stmt24.getTree());

                    }
                    break;
                case 3 :
                    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:42:6: while_stmt
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_while_stmt_in_instruction229);
                    while_stmt25=while_stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, while_stmt25.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "instruction"


    public static class expr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expr"
    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:45:1: expr : andterm ( OR ^ andterm )* ;
    public final hw_compilationParser.expr_return expr() throws RecognitionException {
        hw_compilationParser.expr_return retval = new hw_compilationParser.expr_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token OR27=null;
        hw_compilationParser.andterm_return andterm26 =null;

        hw_compilationParser.andterm_return andterm28 =null;


        Object OR27_tree=null;

        try {
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:45:6: ( andterm ( OR ^ andterm )* )
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:45:8: andterm ( OR ^ andterm )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_andterm_in_expr244);
            andterm26=andterm();

            state._fsp--;

            adaptor.addChild(root_0, andterm26.getTree());

            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:45:16: ( OR ^ andterm )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==OR) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:45:17: OR ^ andterm
            	    {
            	    OR27=(Token)match(input,OR,FOLLOW_OR_in_expr247); 
            	    OR27_tree = 
            	    (Object)adaptor.create(OR27)
            	    ;
            	    root_0 = (Object)adaptor.becomeRoot(OR27_tree, root_0);


            	    pushFollow(FOLLOW_andterm_in_expr250);
            	    andterm28=andterm();

            	    state._fsp--;

            	    adaptor.addChild(root_0, andterm28.getTree());

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "expr"


    public static class andterm_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "andterm"
    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:46:1: andterm : bwor ( AND ^ bwor )* ;
    public final hw_compilationParser.andterm_return andterm() throws RecognitionException {
        hw_compilationParser.andterm_return retval = new hw_compilationParser.andterm_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token AND30=null;
        hw_compilationParser.bwor_return bwor29 =null;

        hw_compilationParser.bwor_return bwor31 =null;


        Object AND30_tree=null;

        try {
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:46:9: ( bwor ( AND ^ bwor )* )
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:46:11: bwor ( AND ^ bwor )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_bwor_in_andterm259);
            bwor29=bwor();

            state._fsp--;

            adaptor.addChild(root_0, bwor29.getTree());

            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:46:16: ( AND ^ bwor )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==AND) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:46:17: AND ^ bwor
            	    {
            	    AND30=(Token)match(input,AND,FOLLOW_AND_in_andterm262); 
            	    AND30_tree = 
            	    (Object)adaptor.create(AND30)
            	    ;
            	    root_0 = (Object)adaptor.becomeRoot(AND30_tree, root_0);


            	    pushFollow(FOLLOW_bwor_in_andterm265);
            	    bwor31=bwor();

            	    state._fsp--;

            	    adaptor.addChild(root_0, bwor31.getTree());

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "andterm"


    public static class bwor_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "bwor"
    // /home/sergio/hw-compilation/src/parser/hw_compilation.g:47:1: bwor : bwxor ( BWOR ^ bwxor )* ;
    public final hw_compilationParser.bwor_return bwor() throws RecognitionException {
        hw_compilationParser.bwor_return retval = new hw_compilationParser.bwor_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token BWOR33=null;
        hw_compilationParser.bwxor_return bwxor32 =null;

        hw_compilationParser.bwxor_return bwxor34 =null;


        Object BWOR33_tree=null;

        try {
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:47:6: ( bwxor ( BWOR ^ bwxor )* )
            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:47:8: bwxor ( BWOR ^ bwxor )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_bwxor_in_bwor274);
            bwxor32=bwxor();

            state._fsp--;

            adaptor.addChild(root_0, bwxor32.getTree());

            // /home/sergio/hw-compilation/src/parser/hw_compilation.g:47:14: ( BWOR ^ bwxor )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==BWOR) ) {
                    alt10=1;
                }

